# FTR-ArchonAgent

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.orchestrator  README.md  aphex-config.yaml  pyproject.toml  requirements-orchestrator.txt  requirements-test.txt  requirements.txt  tsconfig.json
.github/workflows/: build-container.yaml
.kiro/docs/: api.md  architecture.md  data-models.md  faq.md  operations.md  overview.md
.kiro/steering/: archon-docs.md  claude-contract.md  property-tests.md  task-completion-rigor.md  thinking-contract.md  workspace-spec  workspace-spec.md
aphex-pipeline/: README.md  pipeline.yaml
archon/common/: config.py
archon/ingestion/: pipeline.py
archon/monitor/: __init__.py  github_client.py  main.py  metrics.py  workflow.py
archon/query/: __init__.py  metrics.py  models.py  rag_chain.py  server.py  service.py
archon/storage/: __init__.py  change_tracker.py  vector_store.py
docker/: monitor.Dockerfile  query.Dockerfile
lambda/config/: config_manager.py
lambda/git/: github_client.py
manifests/: agent.yaml  configmap.yaml  ingress.yaml  init-job.yaml  kustomization.yaml  monitor-cronjob.yaml  pipeline.yaml  postgres-statefulset.yaml  qdrant-statefulset.yaml  query-deployment.yaml  secrets.yaml  services.yaml  trigger.yaml
migrations/: 001_pipeline_state.sql
pipeline/: README.md  deploy-agent.yaml  deploy-model-server.yaml  deploy-orchestrator.yaml  deploy-pipeline.yaml  package-lock.json  package.json  role-binding.yaml
tests/: __init__.py  conftest.py  test_config.py  test_github_client_basic.py  test_models.py
(+117 files in other folders)
